Updated EDA notebook

--- a/Instacart-EDA-jjs.ipynb
+++ b/Instacart-EDA-jjs.ipynb
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -875,13 +875,13 @@
        "Name: reordered, dtype: float64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reordered_items = merge_prior.groupby(\"order_id\")[\"reordered\"].aggregate(\"sum\").reset_index()\n",
+    "reordered_items = merge_prior.groupby(\"order_id\")[\"reordered\"].sum().reset_index()\n",
     "reordered_items[\"reordered\"].loc[reordered_items[\"reordered\"] > 1] = 1\n",
     "reordered_items.reordered.value_counts() / len(reordered_items)"
    ]
@@ -1385,6 +1385,13 @@
    "source": [
     "users = users.set_index('user_id')\n",
     "users[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we have a dataframe consisting of customers, showing every item they ordered in the past and stats related to those items. Now we need to find a way to build a model that can predict which of the distinct items each user has ordered would most likely be ordered again."
    ]
   },
   {
