Updated EDA notebook

--- a/Instacart-EDA-jjs.ipynb
+++ b/Instacart-EDA-jjs.ipynb
@@ -13,7 +13,8 @@
     "* [When items are ordered](#When-items-are-ordered)\n",
     "* [Gone Bananas!](#Gone-Bananas!)\n",
     "* [Creating Features](#Creating-Features)\n",
-    "* [Create train/test split](#Create-train/test-split)"
+    "* [Create training set](#Create-training-set)\n",
+    "* [Develop a Model](#Develop-a-Model)"
    ]
   },
   {
@@ -1653,14 +1654,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create train/test split"
+    "## Create training set"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I'll perform an inner join the orders and order_products_train data to filter out the training set orders and add the product data to it, then delete the 'eval_set' column."
+    "I'll perform an inner join the orders and order_products_train data to filter out the training set orders and add the product data to it, then delete unnecessary columns."
    ]
   },
   {
@@ -1828,10 +1829,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Develop a Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
