--- a/Instacart-EDA-jjs.ipynb
+++ b/Instacart-EDA-jjs.ipynb
@@ -12,9 +12,7 @@
     "* [\"Missing\" Department](#\"Missing\"-department)\n",
     "* [When items are ordered](#When-items-are-ordered)\n",
     "* [Gone Bananas!](#Gone-Bananas!)\n",
-    "* [Creating Features](#Creating-Features)\n",
-    "* [Create training set](#Create-training-set)\n",
-    "* [Develop a Model](#Develop-a-Model)"
+    "* [More EDA](#More-EDA)"
    ]
   },
   {
@@ -793,6 +791,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## More EDA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
@@ -908,13 +913,6 @@
    ],
    "source": [
     "merge_prior['days_since_prior_order'].fillna(0) # Let's replace NaNs with zeros in this column"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Creating Features"
    ]
   },
   {
@@ -1515,6 +1513,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we have a dataframe showing a dictionary of all items previously ordered and insightfuls stats indexed by user."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 68,
    "metadata": {},
@@ -1642,203 +1647,6 @@
     "users = users.set_index('user_id')\n",
     "users[:5]"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we have a dataframe consisting of customers, showing every item they ordered in the past and stats related to those items. Now we need to find a way to build a model that can predict which of the distinct items each user has ordered would most likely be ordered again."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Create training set"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "I'll perform an inner join the orders and order_products_train data to filter out the training set orders and add the product data to it, then delete unnecessary columns."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>order_id</th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>eval_set</th>\n",
-       "      <th>order_number</th>\n",
-       "      <th>order_dow</th>\n",
-       "      <th>order_hour_of_day</th>\n",
-       "      <th>days_since_prior_order</th>\n",
-       "      <th>product_id</th>\n",
-       "      <th>add_to_cart_order</th>\n",
-       "      <th>reordered</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1187899</td>\n",
-       "      <td>1</td>\n",
-       "      <td>train</td>\n",
-       "      <td>11</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>196</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1187899</td>\n",
-       "      <td>1</td>\n",
-       "      <td>train</td>\n",
-       "      <td>11</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>25133</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1187899</td>\n",
-       "      <td>1</td>\n",
-       "      <td>train</td>\n",
-       "      <td>11</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>38928</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1187899</td>\n",
-       "      <td>1</td>\n",
-       "      <td>train</td>\n",
-       "      <td>11</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>26405</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1187899</td>\n",
-       "      <td>1</td>\n",
-       "      <td>train</td>\n",
-       "      <td>11</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>39657</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   order_id  user_id eval_set  order_number  order_dow  order_hour_of_day  \\\n",
-       "0   1187899        1    train            11          4                  8   \n",
-       "1   1187899        1    train            11          4                  8   \n",
-       "2   1187899        1    train            11          4                  8   \n",
-       "3   1187899        1    train            11          4                  8   \n",
-       "4   1187899        1    train            11          4                  8   \n",
-       "\n",
-       "   days_since_prior_order  product_id  add_to_cart_order  reordered  \n",
-       "0                    14.0         196                  1          1  \n",
-       "1                    14.0       25133                  2          1  \n",
-       "2                    14.0       38928                  3          1  \n",
-       "3                    14.0       26405                  4          1  \n",
-       "4                    14.0       39657                  5          1  "
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_products = pd.merge(orders, order_products_train, on='order_id', how='inner')\n",
-    "train_products[:5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1384617 entries, 0 to 1384616\n",
-      "Data columns (total 9 columns):\n",
-      "order_id                  1384617 non-null int64\n",
-      "user_id                   1384617 non-null int64\n",
-      "order_number              1384617 non-null int64\n",
-      "order_dow                 1384617 non-null int64\n",
-      "order_hour_of_day         1384617 non-null int64\n",
-      "days_since_prior_order    1384617 non-null float64\n",
-      "product_id                1384617 non-null int64\n",
-      "add_to_cart_order         1384617 non-null int64\n",
-      "reordered                 1384617 non-null int64\n",
-      "dtypes: float64(1), int64(8)\n",
-      "memory usage: 105.6 MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "train_orders.info() # Make sure there are no null values"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Develop a Model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
